--- a/webapp/templates/stats/index.html
+++ b/webapp/templates/stats/index.html
@@ -1,13 +1,19 @@
 {% extends 'core/main.html' %}
 {% block content %}
+{% for database in databases %}
 <article class="media content-section">
     <div class="media-body">
 	<div class="article-metadata">
-	    <a class="mr-2" href="#">Lex</a>
+	    <a class="mr-2" href="{% url 'stats-database' database=database.name %}">{{ database.name }}</a>
 	    <small class="text-muted">June 2018</small>
 	</div>
-	<h2><a class="article-title" href="#">Title</a></h2>
-	<p class="article-content">Content</p>
+	<h2><a class="article-title" href="#">Exams:</a></h2>
+	<ul>
+	    {% for collection in database.collections %}
+	    <li class="article-content">{{ collection }}</li>
+	    {% endfor %}
+	</ul>
     </div>
 </article>
+{% endfor %}
 {% endblock %}
