Initial version of the stats database that contains statistical measurements of the data of all other databases's attributes and a new html page to display that information

--- a/webapp/templates/stats/attribute.html
+++ b/webapp/templates/stats/attribute.html
@@ -8,8 +8,8 @@
 	</div>
 	<h2><a class="article-title" href="#">Records:</a></h2>
 	<ul>
-	    {% for attribute in attributes %}
-	    <li><a href="{% url 'stats-attribute' database=database collection=collection attribute=attribute %}">{{ attribute }}</a></li>
+	    {% for value in attribute_stats.values %}
+	    <li>{{ value }}</li>
 	    {% endfor %}
 	</ul>
     </div>
