Improve overall design of the webapp

--- a/webapp/templates/stats/attribute.html
+++ b/webapp/templates/stats/attribute.html
@@ -52,10 +52,10 @@
 
     <div class="media-body">
 	<div class="article-metadata">
-	    <a class="mr-2" href="#">{{ database }} - {{ collection }}</a>
-	    <small class="text-muted">June 2018</small>
+	    <h2>
+		<a class="mr-2" href="#">{{ collection | upper }} - {{ attribute }} </a>
+	    </h2>
 	</div>
-	<h2><a class="article-title" href="#">{{ attribute }}:</a></h2>
 	<table class="table">
 	    <thead class="thead-light">
 		<tr>
