--- a/webapp/templates/stats/collection.html
+++ b/webapp/templates/stats/collection.html
@@ -3,13 +3,13 @@
 <article class="media content-section">
     <div class="media-body">
 	<div class="article-metadata">
-	    <a class="mr-2" href="#">{{ database }} - {{ collection }}</a>
-	    <small class="text-muted">June 2018</small>
+	    <h2>
+		<a class="mr-2" href="#">{{ collection | upper }} records</a>
+	    </h2>
 	</div>
-	<h2><a class="article-title" href="#">Records:</a></h2>
-	<ul>
+	<ul class="list-inline">
 	    {% for attribute in attributes %}
-	    <li><a href="{% url 'stats-attribute' database=database collection=collection attribute=attribute %}">{{ attribute }}</a></li>
+	    <li class="list-inline-item"><a href="{% url 'stats-attribute' database=database collection=collection attribute=attribute %}">{{ attribute }}</a></li>
 	    {% endfor %}
 	</ul>
     </div>
