--- a/webapp/templates/stats/database.html
+++ b/webapp/templates/stats/database.html
@@ -4,11 +4,12 @@
 <article class="media content-section">
     <div class="media-body">
 	<div class="article-metadata">
-	    <a class="mr-2" href="{% url 'stats-collection' database=database collection=collection %}">{{ collection }}</a>
-	    <small class="text-muted">June 2018</small>
+	    <h2>
+		<a class="mr-2" href="{% url 'stats-collection' database=database collection=collection %}">{{ collection | upper }}</a>
+	    </h2>	    
 	</div>
-	<h2><a class="article-title" href="#">Records:</a>{{ stats.records }}</h2>
-	<h2><a class="article-title" href="#">Attributes:</a>{{ stats.attributes }}</h2>
+	<h4><a class="article-title" href="#">Records:</a>{{ stats.records }}</h4>
+	<h4><a class="article-title" href="#">Attributes:</a>{{ stats.attributes }}</h4>
     </div>
 </article>
 {% endfor %}
