Export pages added to the webapp to allow the export of a dataset to CSV or ARFF formats.

--- a/webapp/templates/core/navigation.html
+++ b/webapp/templates/core/navigation.html
@@ -8,7 +8,8 @@
 	    <div class="collapse navbar-collapse" id="navbarToggle">
 		<div class="navbar-nav mr-auto">
 		    <a class="nav-item nav-link" href="{% url 'stats-home' %}">Home</a>
-		    <a class="nav-item nav-link" href="{% url 'stats-about' %}">About</a>
+		    <a class="nav-item nav-link" href="{% url 'stats-home' %}">Stats</a>
+		    <a class="nav-item nav-link" href="{% url 'export-home' %}">Export</a>
 		</div>
 		<!-- Navbar Right Side -->
 		<div class="navbar-nav">
